tests/ui/traits/const-traits/hir-const-check.stderr
warning: the feature `effects` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/hir-const-check.rs:5:30
   |
LL | #![feature(const_trait_impl, effects)]
   |                              ^^^^^^^
   |
   = note: see issue #102090 <https://github.com/rust-lang/rust/issues/102090> for more information
   = note: `#[warn(incomplete_features)]` on by default

error[E0658]: `?` is not allowed in a `const fn`
  --> $DIR/hir-const-check.rs:14:9
   |
LL |         Some(())?;
   |         ^^^^^^^^^
   |
   = note: see issue #74935 <https://github.com/rust-lang/rust/issues/74935> for more information
   = help: add `#![feature(const_try)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0015]: `?` cannot determine the branch of `Option<()>` in constant functions
  --> $DIR/hir-const-check.rs:14:9
   |
LL |         Some(())?;
   |         ^^^^^^^^^
   |
note: impl defined here, but it is not `const`
  --> $SRC_DIR/core/src/option.rs:LL:COL
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error[E0015]: `?` cannot convert from residual of `Option<()>` in constant functions
  --> $DIR/hir-const-check.rs:14:9
   |
LL |         Some(())?;
   |         ^^^^^^^^^
   |
note: impl defined here, but it is not `const`
  --> $SRC_DIR/core/src/option.rs:LL:COL
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error: aborting due to 3 previous errors; 1 warning emitted

Some errors have detailed explanations: E0015, E0658.
For more information about an error, try `rustc --explain E0015`.
